Fix small alignment issues - fit to grid

--- a/src/nationalarchives/components/header/_index.scss
+++ b/src/nationalarchives/components/header/_index.scss
@@ -101,8 +101,8 @@
   }
 
   &__logo {
-    padding-top: 1.25rem;
-    padding-bottom: 1.25rem;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
   }
 
   &__logo-link {
@@ -135,8 +135,8 @@
   }
 
   .tna-logo {
-    width: 6.25rem;
-    height: 6.25rem;
+    width: 6rem;
+    height: 6rem;
 
     display: inline-block;
   }
@@ -144,6 +144,11 @@
   &__logo-link--href:hover .tna-logo {
     outline: 0.375rem #fff solid;
     outline-offset: 1px;
+  }
+
+  &__logo-link--href:active .tna-logo,
+  &__logo-link--href:focus .tna-logo {
+    outline: none;
   }
 
   .tna-logo__foreground {
