--- a/src/nationalarchives/components/hero/_index.scss
+++ b/src/nationalarchives/components/hero/_index.scss
@@ -4,8 +4,8 @@
 .tna-hero {
   min-height: min(35vw, 480px);
   margin-bottom: 2rem;
-  padding-top: 5.25rem;
-  padding-bottom: 3.25rem;
+  padding-top: 5rem;
+  padding-bottom: 3rem;
 
   display: flex;
   align-items: flex-end;
